apps/sitio-staging/sitio-rails/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitio-rails
  namespace: sitio-staging
  labels:
    app: sitio-rails
spec:
  type: ClusterIP
  selector:
    app: sitio-rails
  ports:
    - name: http
      port: 80
      targetPort: http
